Revert "Fix navbar sizing on Safari"
This reverts commit f1d08c8cac8d91113c6fdcbc4ef09af31fc6cbd1.

--- a/app/assets/stylesheets/navigation_bar.scss
+++ b/app/assets/stylesheets/navigation_bar.scss
@@ -4,6 +4,7 @@ nav {
   position: fixed;
 
   display: grid;
+  grid-auto-rows: 100%;
 
   height: var(--navigation-height);
   width: 100%;
